--- a/home.html
+++ b/home.html
@@ -66,7 +66,7 @@
 					<a href="achievements.html">Achievements</a>
 				</div>
 			</div>
-			<button class="dropbtn" onclick="window.location.href='#';">Comparison</button>
+			<button class="dropbtn" onclick="window.location.href='comparison.html';">Comparison</button>
 			<button class="dropbtn" onclick="window.location.href='contact.html';">Contact</button>
 		</div>
 </div>
